--- a/style.css
+++ b/style.css
@@ -54,8 +54,7 @@ html {
     height: 80%;
     align-content: center;
     text-align: center;
-    font-size: 3rem;;
-    
+    font-size: 3rem;
 }
 
 
