--- a/style.css
+++ b/style.css
@@ -69,9 +69,7 @@ html {
     gap: 30px;
     margin-left: auto;
     align-items: center;
-
 }
-
 
 .main__logo {
     font-family: "Poppins", serif;
@@ -120,6 +118,20 @@ html {
 
 
 /* --------------------------------WORK----------------------------- */
+
+.grid-parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    border: 2px solid black;
+    background-color: #FCFCFC;
+}
+
+
+
+
 
 
 /* --------------------------------JOURNEY----------------------------- */
