--- a/style.css
+++ b/style.css
@@ -285,3 +285,43 @@ html {
 
 /* --------------------------------CONNECT----------------------------- */
 
+.connect {
+    border-top: 1px solid black;
+}
+
+.connectwithme {
+    font-size: 3em;
+    padding: 1em 0;
+}
+
+.connect__contact {
+    border: 2px solid red;
+}
+
+.contact__items {
+    border: 2px solid greenyellow;
+    padding: 10em 8em;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+}
+
+.contact__items a {
+    color:#191919;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+
+.contact__items a:hover {
+    color: #e0e0e0; /* This will change font color to white */
+    font-style: italic;
+}
+
+.contact__items:hover {
+    background-color: #191919; /* Background color of the div */
+}
+
+.contact__items:hover a {
+    color: #e0e0e0; /* This makes the font color white when hovering over the div */
+}
