added connect with me end

--- a/style.css
+++ b/style.css
@@ -188,10 +188,10 @@ html {
 
 
 .grid__text-item {
-    border-top: 0.5px solid #191919;
-    border-bottom: 1px solid #191919;
-    border-right: 2px solid #191919;
-    border-left: 2px solid #191919;
+    border-top: 0.1px solid #191919;
+    border-bottom: .1px solid #191919;
+    border-right: 0.5px solid #191919;
+    border-left: .5px solid #191919;
     position: relative;
 }
 
@@ -239,7 +239,7 @@ html {
 }
 
 .journey__div-img {
-    width: 30%;
+    width: 20%;
 }
 
 .con__journey-p a {
@@ -340,7 +340,6 @@ html {
 }
 
 .connect__contact {
-    border: 2px solid red;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
@@ -350,9 +349,10 @@ html {
 }
 
 .contact__items {
-    border: 2px solid greenyellow;
     padding: 8em 6em;
     text-align: center;
+    border-top: 1px solid #191919;
+    border-right: 1px solid #191919;
 }
 
 .contact__items a {
@@ -388,4 +388,36 @@ html {
     .connect__contact {
       grid-template-columns: 1fr; 
     }
+  }
+
+  /* -------------------Footer-----------------------*/
+
+  .connect_bye {
+    font-weight: 200;
+    justify-content: center;
+  }
+
+  .bye_one {
+    border-top: 1px solid #191919;
+    border-right: 1px solid #191919;
+    padding: 8em 0;
+    width: 20%;
+  }
+
+  .bye_two {
+    border-top: 1px solid #191919;
+    border-right: 1px solid #191919;
+    padding: 8em 0;
+    width: 80%;
+  }
+
+  .bye_two p a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #191919;
+  }
+
+  .bye_two p a:hover {
+    font-style: italic;
+    font-weight: 100;
   }
