--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ html {
         align-items: center;
         text-align: left;
         margin: 0;
+        margin-top: 3em;
         padding: 0;
         border: 2px solid yellow;
     }
@@ -366,7 +367,18 @@ html {
     opacity: 0; /* Fully transparent */
 }
 
-@med
+@media (max-width: 900px) {
+    .factspopping {
+        padding: 3em;
+        margin: 3em 0;
+    }
+
+    .marquee-button {
+        margin: 1em 0;
+    }
+
+    
+}
 
 
 /* --------------------------------CONNECT----------------------------- */
