trying to do a hamburger navigation bar

--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ html {
     font-style: italic;
 }
 
+/* the navigation for smaller screen sizes */
+
+
+
 
 /* Text in Main */
 
@@ -147,15 +151,17 @@ html {
     font-size: 3rem;
 }
 
-@media (max-width: 700px) {
-    .main__me {
-        font-size: 16px;
-    }
-}
+
 
 @media (max-width: 1200px) {
     .main__me {
         font-size: 2rem;
+    }
+}
+
+@media (max-width: 700px) {
+    .main__me {
+        font-size: 16px;
     }
 }
 
