--- a/style.css
+++ b/style.css
@@ -131,94 +131,6 @@ html {
     font-style: italic;
 }
 
-/* the navigation for smaller screen sizes */
-
-/* Initially, hide the nav links on small screens */
-.main__nav {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.main__nav-list {
-    gap: 30px;
-    margin-left: auto;
-    align-items: center;
-}
-
-/* Hide the navigation links for small screens */
-.main__nav-list {
-    display: flex;
-}
-
-/* Hamburger menu styles */
-.ham-menu {
-    display: none;
-    flex-direction: column;
-    gap: 5px;
-    cursor: pointer;
-}
-
-.ham-menu span {
-    width: 30px;
-    height: 3px;
-    background-color: #191919;
-}
-
-/* Fullscreen overlay with blur */
-.fullscreen-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(5px);
-    display: none;
-    z-index: 999;
-}
-
-/* Show the hamburger and hide the regular nav on small screens */
-@media (max-width: 1000px) {
-    .main__nav {
-        display: none;  /* Hide default nav */
-    }
-    .ham-menu {
-        display: flex;  /* Show hamburger */
-    }
-}
-
-
-/* Show links when the hamburger is clicked */
-.nav-active #nav-links {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    z-index: 1000;
-    padding: 3em;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.nav-active #nav-links .list-items {
-    margin: 15px 0;
-}
-
-/* Nav links animation for better UX */
-#nav-links {
-    display: none;
-    transition: transform 0.3s ease-in-out;
-}
-
-
-
 /* Text in Main */
 
 .main {
@@ -313,25 +225,8 @@ html {
 }
 
 .con__journey-p {
-    width: 50%;
-    font-size: 1rem;
-    justify-content: center;
-    align-content:flex-start;
-    padding-right: 2em;
-}
-
-.con__journey-img {
-    width: 50%;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-}
-
-.journey__div-img {
-    width: 20%;
+    width: 70%;
+    font-size: 1.5rem;
 }
 
 .con__journey-p a {
@@ -345,42 +240,33 @@ html {
     font-style: italic;
 }
 
-@media (max-width: 900px) {
-    .mediaflex {
-        display: flex;
-        flex-direction: column;
-    }
-    .con__journey-p {
-        width: 100%;
-    }
 
-    .con__journey-img {
-        text-align: left;
-        width: 100%;
-        justify-content: center;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        text-align: left;
-        margin: 0;
-        margin-top: 3em;
-        padding: 0;
-        border: 2px solid yellow;
-    }
-    .journey__div-img {
-        width: 50%;
-        border: 2px solid green;
-        height: 100%;
-        margin-right: 3em;
-    }
 
-    .journey__facts {
-        border: 2px solid red;
-        width: 50%;
-        align-items: flex-start;
-        height: 100%;
-    }
+.con__journey-img {
+    text-align: left;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: left;
+    margin: 0;
+    margin-top: 3em;
+    padding: 0;
 }
+
+.journey__div-img {
+    width: 50%;
+    height: 100%;
+    margin-right: 3em;
+}
+
+.journey__facts {
+    width: 100%;
+    align-items: flex-start;
+    height: 100%;
+}
+
 
 
 /* FACTS POPPINNNGG */
@@ -398,27 +284,13 @@ html {
     padding: 1em 2em;
     background-color: transparent; 
     border: 1px solid #191919; 
-    border-radius: 100px;
-    width: 150px;
+    width: auto;
     text-transform: uppercase;
-    overflow: hidden; /* Hide overflowing text */
     transition: all 0s ease; /* Smooth transition for hover effects */
-    text-align: center; /* Center the text horizontally */
 }
 
-.marquee-container {
-    position: relative;
-    display: flex;
-    flex-direction: row; /* Arrange the text in a horizontal row */
-    width: 100%;
-    height: 100%;
-}
 
-.marquee-text {
-    white-space: nowrap; /* Prevent text wrapping */
-    opacity: 1; /* Text is visible by default */
-    transition: transform 2s ease; /* Smooth transformation */
-}
+
 
 
 /* Hover Effect */
@@ -446,9 +318,8 @@ html {
 /* facts---------- */
 
 .factspopping {
-    border: 1px solid #191919;
-    padding: 2em;
-    margin: 2em;
+    padding: 2em 0;
+    margin: 2em 0;
 
 }
 
@@ -534,23 +405,34 @@ html {
 
   /* -------------------Footer-----------------------*/
 
-  .connect_bye {
+.connect_bye {
     font-weight: 200;
     justify-content: center;
   }
 
-  .bye_one {
+.bye_one {
     border-top: 1px solid #191919;
     border-right: 1px solid #191919;
-    padding: 8em 0;
+    padding: 2em 0;
     width: 20%;
   }
 
-  .bye_two {
+.bye_one-left {
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.journey__div-img {
+    width: 50%;
+}
+
+.bye_two {
     border-top: 1px solid #191919;
     border-right: 1px solid #191919;
-    padding: 8em 0;
+    padding: 2em 0;
     width: 80%;
+    align-content: center;
   }
 
   .bye_two p a {
@@ -573,7 +455,6 @@ html {
 
   .codinglab {
     margin: auto 0;
-    border: 2px solid red;
     text-align: center;
     align-content: center;
   }
@@ -582,10 +463,8 @@ html {
 
     main {
         position: relative;
-        width: 100%;
         height: 100vh; /* Set the height to viewport height */
         overflow: hidden; /* Ensure the square doesn't go outside */
-        border: 1px solid #ccc; /* Optional: border for the main element */
     }
     
     #randomSquare {
