--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ html {
 .journey__facts {
     width: 100%;
     align-items: flex-start;
-    height: 100%;
+    min-height: 100%;
 }
 
 @media (max-width: 1000px) {
